<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.ilactakipsistemi.ProfilEdit">

    <TextView
        android:id="@+id/txtProfiliDuzenle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/txtProfiliDuzenle"
        android:textSize="21sp"
        android:textColor="#D8BFD8"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/txtEditIsim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:textColorHint="#C7C7CD"
        android:inputType="textPersonName"
        android:hint="@string/txtEditIsim"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.211" />

    <EditText
        android:id="@+id/txtEditSoyad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#C7C7CD"
        android:hint="@string/txtEditSoyad"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/txtEditKullaniciAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#C7C7CD"
        android:hint="@string/txtEditKullaniciAdi"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.438" />

    <EditText
        android:id="@+id/txtEditSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="#C7C7CD"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txtEditSifre"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.566" />

    <EditText
        android:id="@+id/txtEditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#C7C7CD"
        android:hint="@string/txtEditEmail"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.668" />

    <EditText
        android:id="@+id/txtEditDogumTarihi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/txtEditDogumTarihi"
        android:textColorHint="#C7C7CD"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.805" />

    <Button
        android:id="@+id/btnEditKaydet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/btnEditKaydet"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn"
        app:layout_constraintVertical_bias="0.965" />
</android.support.constraint.ConstraintLayout>
