<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.ilactakipsistemi.IlacEkle">

    <EditText
        android:id="@+id/txtIlacAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txtIlacAdi"
        android:textColorHint="#C7C7CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.318"
        tools:layout_editor_absoluteY="147dp" />

    <EditText
    android:id="@+id/txtGundeKacKere"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="number"
    android:hint="@string/txtGundeKacKere"
    android:textColorHint="#C7C7CD"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/txtIlkKullanmaSaati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/txtIlkKullanmaSaati"
        android:textColorHint="#C7C7CD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/btnHatirlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHatirlat"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        app:layout_constraintHorizontal_bias="0.547" />
</android.support.constraint.ConstraintLayout>
